<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.mindolph</groupId>
    <artifactId>mindolph</artifactId>
    <packaging>pom</packaging>
    <version>1.6.6</version>
    <modules>
        <module>mindolph-fx</module>
        <module>mindolph-core</module>
        <module>mindolph-mindmap</module>
        <module>mindolph-base</module>
        <module>mindolph-plantuml</module>
        <module>mindolph-desktop</module>
        <module>mindmap-panel</module>
        <module>mindmap-model</module>
        <module>mindolph-markdown</module>
        <module>mindolph-csv</module>
    </modules>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <javafx.version>21.0.1</javafx.version>
        <commons.lang.version>3.14.0</commons.lang.version>
        <commons.io.version>2.11.0</commons.io.version>
        <commons.text.version>1.11.0</commons.text.version>
        <commons.collections.version>4.4</commons.collections.version>
        <commons.codec.version>1.15</commons.codec.version>
        <commons.validator.version>1.6</commons.validator.version>
        <commons.csv.version>1.10.0</commons.csv.version>
        <swstate.version>2.0</swstate.version>
        <plantuml.version>1.2023.12</plantuml.version>
        <swiftboot.version>2.4.5</swiftboot.version>
        <slf4j.version>2.0.9</slf4j.version>
        <log4j2.version>2.22.0</log4j2.version>
        <junit.version>5.10.1</junit.version>
        <mfx.version>1.2.4</mfx.version>
        <gson.version>2.10.1</gson.version>
        <controlsfx.version>11.2.0</controlsfx.version>
        <richtextfx.version>0.11.2</richtextfx.version>
        <reactfx.version>2.0-M5</reactfx.version>
<!--        <reactor.version>3.5.3</reactor.version>-->
        <jsoup.version>1.17.1</jsoup.version>
        <json.version>20231013</json.version>
        <flexmark.version>0.64.8</flexmark.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.github.hamawhitegg</groupId>
                <artifactId>langchain-core</artifactId>
                <version>0.2.1</version>
            </dependency>
            <dependency>
                <groupId>com.github.swiftech</groupId>
                <artifactId>swstate</artifactId>
                <version>${swstate.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.swiftech</groupId>
                <artifactId>swiftboot-utils</artifactId>
                <version>${swiftboot.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.swiftech</groupId>
                <artifactId>swiftboot-collections</artifactId>
                <version>${swiftboot.version}</version>
            </dependency>
            <dependency>
                <groupId>net.sourceforge.plantuml</groupId>
                <artifactId>plantuml</artifactId>
                <version>${plantuml.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-base</artifactId>
                <version>${javafx.version}</version>
                <classifier>${platform}</classifier>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-graphics</artifactId>
                <version>${javafx.version}</version>
                <classifier>${platform}</classifier>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-controls</artifactId>
                <version>${javafx.version}</version>
                <classifier>${platform}</classifier>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-fxml</artifactId>
                <version>${javafx.version}</version>
                <classifier>${platform}</classifier>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-swing</artifactId>
                <version>${javafx.version}</version>
                <classifier>${platform}</classifier>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-web</artifactId>
                <version>${javafx.version}</version>
                <classifier>${platform}</classifier>
            </dependency>
            <dependency>
                <groupId>com.mindolph</groupId>
                <artifactId>mfx</artifactId>
                <version>${mfx.version}</version>
            </dependency>
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>${commons.io.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${commons.lang.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-collections4</artifactId>
                <version>${commons.collections.version}</version>
            </dependency>
            <dependency>
                <groupId>commons-codec</groupId>
                <artifactId>commons-codec</artifactId>
                <version>${commons.codec.version}</version>
            </dependency>
            <dependency>
                <groupId>commons-validator</groupId>
                <artifactId>commons-validator</artifactId>
                <version>${commons.validator.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-text</artifactId>
                <version>${commons.text.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-csv</artifactId>
                <version>${commons.csv.version}</version>
            </dependency>
            <dependency>
                <groupId>org.fxmisc.richtext</groupId>
                <artifactId>richtextfx</artifactId>
                <version>${richtextfx.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>org.openjfx</groupId>
                        <artifactId>javafx-base</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>org.openjfx</groupId>
                        <artifactId>javafx-fxml</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>org.openjfx</groupId>
                        <artifactId>javafx-graphics</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>org.openjfx</groupId>
                        <artifactId>javafx-controls</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>com.google.code.gson</groupId>
                <artifactId>gson</artifactId>
                <version>${gson.version}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-api</artifactId>
                <version>${log4j2.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-core</artifactId>
                <version>${log4j2.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-slf4j2-impl</artifactId>
                <version>${log4j2.version}</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/org.controlsfx/controlsfx -->
            <dependency>
                <groupId>org.controlsfx</groupId>
                <artifactId>controlsfx</artifactId>
                <version>${controlsfx.version}</version>
            </dependency>
            <dependency>
                <groupId>org.reactfx</groupId>
                <artifactId>reactfx</artifactId>
                <version>${reactfx.version}</version>
            </dependency>
<!--            <dependency>-->
<!--                <groupId>io.projectreactor</groupId>-->
<!--                <artifactId>reactor-core</artifactId>-->
<!--                <version>${reactor.version}</version>-->
<!--            </dependency>-->
            <dependency>
                <groupId>org.jsoup</groupId>
                <artifactId>jsoup</artifactId>
                <version>${jsoup.version}</version>
            </dependency>
            <dependency>
                <groupId>org.json</groupId>
                <artifactId>json</artifactId>
                <version>${json.version}</version>
            </dependency>

            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>


    <profiles>
        <profile>
            <id>unix-active</id>
            <activation>
                <os>
                    <family>unix</family>
                </os>
            </activation>
            <properties>
                <platform>linux</platform>
            </properties>
        </profile>
        <profile>
            <id>mac-active</id>
            <activation>
                <os>
                    <family>mac</family>
                </os>
            </activation>
            <properties>
                <platform>mac</platform>
            </properties>
        </profile>
        <profile>
            <id>windows-active</id>
            <activation>
                <os>
                    <family>windows</family>
                </os>
            </activation>
            <properties>
                <platform>win</platform>
            </properties>
        </profile>
        <profile>
            <id>aliyun</id>
            <repositories>
                <repository>
                    <id>aliyun</id>
                    <name>aliyun mirror</name>
                    <url>https://maven.aliyun.com/repository/central</url>
                </repository>
            </repositories>
            <pluginRepositories>
                <pluginRepository>
                    <id>aliyun-plugin</id>
                    <name>aliyun plugin mirror</name>
                    <url>https://maven.aliyun.com/repository/central</url>
                </pluginRepository>
            </pluginRepositories>
        </profile>
    </profiles>
</project>